[tool.poetry]
name = "airflow-docker"
version = "0.1.0"
description = "a base config to airflow + docker"
authors = ["NiccoloSalvini <niccolo.salvini27@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
